# libapt

./: .gitignore  Cargo.toml  LICENSE  README.md  coverage.sh
.github/workflows/: publish.yml
examples/: hello.rs
src/: distro.rs  error.rs  lib.rs  link.rs  package.rs  package_index.rs  package_version.rs  packages.rs  release.rs  signature.rs  source.rs  source_index.rs  util.rs  version.rs
src/types/: architecture.rs  mod.rs  priority.rs
tests/: public_interface.rs
