[package]
name = "libapt"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Irgang <thomas@irgang.eu>"]
description = "Pure Rust apt library."
# documentation = ""
readme = "README.md"
# homepage = "" 
repository = "https://codeberg.org/tomirgang/libapt"
license = "Apache-2.0"
keywords = ["apt", "debian", "deb", "linux"]
categories = ["library", "development-tools"]

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
log = "0.4.22"
pgp = "0.14.0"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["blocking"] }
