[package]
name = "libapt"
version = "1.3.0"
edition = "2021"
authors = ["Thomas Irgang <thomas@irgang.eu>"]
description = "Rust library for interfacing with Debian apt repositories."
documentation = "https://github.com/lts-linux/libapt"
readme = "README.md"
homepage = "https://lts-linux.eu/projects/libapt/" 
repository = "https://github.com/lts-linux/libapt"
license-file = "LICENSE"
keywords = ["apt", "debian", "deb", "linux"]
categories = ["api-bindings", "parsing"]
exclude = ["*.sh", ".*"]

[dependencies]
assert_cmd = "2.0.16"
chrono = { version = "0.4.38", features = ["serde"] }
flate2 = "1.0.34"
log = "0.4.22"
md5 = "0.7.0"
pgp = "0.14.0"
predicates = "3.1.2"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["blocking"] }
rust-lzma = "0.6.0"
serde = { version = "1.0.214", features = ["derive"] }
sha1 = "0.10.6"
sha2 = "0.10.8"

[dev-dependencies]
tokio = { version = "1.41.1", features = ["full"] }
tokio-test = "0.4.4"
